# apibackuper

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pyre_configuration  CHANGELOG.md  HISTORY.md  HISTORY.rst  LICENSE  README.md  README.rst  pylint_report.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: README.md  ci.yml  codeql.yml  dependency-review.yml  publish.yml
apibackuper/: __init__.py  __main__.py  auth.py  common.py  constants.py  core.py  rate_limiter.py
apibackuper/cmds/: __init__.py  config_loader.py  http_client.py  project.py  project.py_  utils.py
apibackuper/schemas/: config_schema.json
apibackuper/storage/: __init__.py  backends.py
devdocs/: ANALYSIS_AND_IMPROVEMENTS.md  SUGGESTIONS.md
examples/: README.md
examples/budgetreg/: apibackuper.cfg  apibackuper.yaml
examples/budgetrgz/: apibackuper.cfg  apibackuper.yaml
examples/budgetsclassif/: apibackuper.cfg  apibackuper.yaml
examples/budgettofk/: apibackuper.cfg  apibackuper.yaml
examples/esklp/: apibackuper.yaml
examples/etrust/: apibackuper.cfg  apibackuper.yaml  params.json
examples/fpreceivers/: apibackuper.cfg  apibackuper.yaml
examples/hhemployers/: apibackuper.cfg  apibackuper.yaml  params.json
examples/hubofdata/: apibackuper.cfg
examples/sozd/: apibackuper.cfg  apibackuper.yaml
examples/sozd/scripts/: listtodata.py  pagetodata.py
examples/subsidies/: apibackuper.cfg  apibackuper.yaml  params.json
openspec/: project.md
openspec/changes/add-backup-enhancements/: design.md  proposal.md  tasks.md
openspec/changes/add-backup-enhancements/specs/api-detection/: spec.md
openspec/changes/add-backup-enhancements/specs/backup-resume/: spec.md
openspec/changes/add-backup-enhancements/specs/backup-update/: spec.md
openspec/changes/add-backup-enhancements/specs/config-validation/: spec.md
openspec/changes/add-backup-enhancements/specs/document-usage/: spec.md
openspec/changes/add-backup-enhancements/specs/export-filtering/: spec.md
openspec/changes/add-backup-enhancements/specs/follow-links/: spec.md
openspec/changes/add-backup-enhancements/specs/hook-execution/: spec.md
openspec/changes/add-backup-enhancements/specs/request-execution/: spec.md
openspec/changes/add-backup-enhancements/specs/run-observability/: spec.md
openspec/changes/add-backup-enhancements/specs/storage-backend/: spec.md
openspec/changes/add-dry-run-mode/: proposal.md  tasks.md
openspec/changes/add-dry-run-mode/specs/run-execution/: spec.md
openspec/changes/fix-build-config/: proposal.md  tasks.md
openspec/changes/fix-build-config/specs/build-system/: spec.md
openspec/changes/fix-critical-bugs/: proposal.md  tasks.md
openspec/changes/fix-critical-bugs/specs/pagination/: spec.md
openspec/changes/improve-security/: proposal.md  tasks.md
openspec/changes/improve-security/specs/security/: spec.md
openspec/changes/improve-test-quality/: proposal.md  tasks.md
openspec/changes/improve-test-quality/specs/testing/: spec.md
openspec/changes/refactor-project-class/: proposal.md  tasks.md
openspec/changes/refactor-project-class/specs/architecture/: spec.md
openspec/changes/remove-dead-code/: proposal.md  tasks.md
openspec/changes/remove-dead-code/specs/code-quality/: spec.md
openspec/changes/unify-storage-layer/: proposal.md  tasks.md
openspec/changes/unify-storage-layer/specs/storage/: spec.md
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_common.py  test_config_loader.py  test_core.py  test_http_client.py  test_project.py  test_rate_limiter.py  test_storage.py  test_utils.py
